tests/machine/x/ocaml/str_builtin.error
File "/tmp/TestOCamlCompiler_VMValid_Goldenstr_builtin2693199379/001/str_builtin.ml", line 22, characters 2-15:
22 |   print_endline __show (123);
       ^^^^^^^^^^^^^
Error: This function has type string -> unit
       It is applied to too many arguments; maybe you forgot a `;'.
